Fix bottom navbar overlapping content on settings and other pages

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -151,7 +151,7 @@
     </header>
 
     <!-- Main Content Area -->
-    <main id="main-content" class="flex-1 overflow-y-auto p-2 md:p-4">
+    <main id="main-content" class="flex-1 overflow-y-auto p-2 md:p-4 pb-20 md:pb-24">
         {{.Content}}
     </main>
 
