--- a/web/templates/auth_login.html
+++ b/web/templates/auth_login.html
@@ -19,7 +19,7 @@
                     </label>
                     <input type="email" id="email" name="email" placeholder="you@example.com" class="input input-bordered w-full" required autofocus />
                 </div>
-                <button type="submit" class="btn btn-primary w-full">Send Sign-In Link</button>
+                <button type="submit" class="btn btn-primary w-full">Send Sign-In Code</button>
             </form>
             <div class="divider">OR</div>
             <a href="/register" class="btn btn-outline w-full">Create a Household</a>
